Add crop pumpkin model and update level scene with new resources; restructure tree nodes for better organization

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -3,6 +3,14 @@
 ## Project Context
 This is a Godot 4 game development project called "Metropolis". The project follows Godot's standard directory structure and conventions.
 
+## Development Approach
+**IMPORTANT**: Always provide options and ask for confirmation before implementing solutions. When the user requests a feature or mentions a problem:
+1. First analyze the situation and understand the requirements
+2. Provide 2-3 different implementation options with pros/cons
+3. Ask the user which approach they prefer
+4. Only implement after getting explicit confirmation
+5. Exception: Only implement directly when the user explicitly asks for a specific option (e.g., "implement option 2")
+
 ## Code Style and Conventions
 
 ### GDScript Guidelines
