Add debug cycling analysis and implement chest storage UI
- Created a new script `debug_cycling.gd` to simulate and analyze building type cycling logic.
- Added a scene `debug_cycling.tscn` for the debug UI.
- Updated `tree.tscn` to include a gather time for tree interactions.
- Modified `chest.gd` to include new storage management features and UI integration.
- Enhanced `chest.tscn` to support new areas and storage UI.
- Updated `player_interaction.gd` to handle chest interactions and manage nearby chest references.
- Implemented `chest_storage_ui.gd` for managing the chest storage interface.
- Created a scene `chest_storage_ui.tscn` for the storage UI layout.
- Added a test script `test_new_cycle.gd` to validate the new cycling logic.
- Created a scene `test_new_cycle.tscn` for testing the cycling functionality.

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -11,6 +11,24 @@ This is a Godot 4 game development project called "Metropolis". The project foll
 4. Only implement after getting explicit confirmation
 5. Exception: Only implement directly when the user explicitly asks for a specific option (e.g., "implement option 2")
 
+### Node Reference Strategy
+**PREFERRED**: Use `@export` variables for node references instead of complex code to find nodes:
+- Export all node references as variables at the top of the script
+- Ask the user to assign these in the Godot editor after writing the script
+- This approach is cleaner, more maintainable, and easier to debug
+- Avoid writing complex node-finding code like `get_child(0)`, recursive searches, etc.
+
+Example:
+```gdscript
+# ✅ GOOD - Clean and simple
+@export var interaction_area: Area3D
+@export var mesh_node: Node3D
+
+# ❌ AVOID - Complex node finding
+@onready var interaction_area = find_child("InteractionArea") 
+@onready var mesh_node = get_child(0).get_child(1)
+```
+
 ## Code Style and Conventions
 
 ### GDScript Guidelines
@@ -41,10 +59,24 @@ This is a Godot 4 game development project called "Metropolis". The project foll
 - Prefer signal connections in code over the editor when possible for better maintainability
 
 ### Node References
-- Use `@onready var` for node references: `@onready var sprite: Sprite2D = $Sprite2D`
-- Use typed node references when possible
-- Prefer `get_node()` or `$` syntax for immediate children
-- Use `find_child()` sparingly and only when necessary
+- **PREFERRED APPROACH**: Use `@export` variables for node references and assign them in the editor
+  ```gdscript
+  # Export node references - assign these in the Godot editor
+  @export var build_area: Area3D
+  @export var interaction_area: Area3D  
+  @export var chest_mesh: Node3D
+  ```
+- This approach is much cleaner than finding nodes programmatically
+- Always include safety checks when using exported node references:
+  ```gdscript
+  if build_area:
+      build_area.body_entered.connect(_on_build_area_entered)
+  else:
+      print("Warning: build_area not assigned in editor")
+  ```
+- Use `@onready var` only for child nodes that are guaranteed to exist in the scene tree
+- Avoid complex node finding code like `get_child(0)`, `find_child()`, or searching through node hierarchies
+- When writing a script that needs node references, ask the user to hook up the exported variables in the editor
 
 ### Physics and Movement
 - Use CharacterBody3D/CharacterBody2D for player controllers
